--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>kr.co.cloudine.template.standalone</groupId>
-    <artifactId>spring-mybatis-web</artifactId>
+    <groupId>kr.co.cloudine.template</groupId>
+    <artifactId>spring-mybatis-extjs</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>spring-mybatis-web</name>
-    <url>http://maven.apache.org</url>
+    <name>spring-mybatis-extjs</name>
+    <url>http://www.cloudine.io</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
