로그인 예제를 추가함.

--- a/src/main/webapp/resources/app/app.json
+++ b/src/main/webapp/resources/app/app.json
@@ -61,8 +61,11 @@
      *      ]
      */
     "requires": [
-        "font-awesome"
+        "font-awesome",
+        "ext-locale"
     ],
+
+    "locale": "ko",
 
     /**
      * Fashion build configuration properties.
