설정파일 내 패키지 이름 수정 및 다수 에러 고침.
 - dispatcher-servlet.xml 내 패키지 이름 수정.

 - user-mapper.xml 내 파라미터 타입 오류 수정.

 - UserServiceImpl.java 내 에러핸들링 코드 오류 수정.

 - web.xml 내 폴더 이름 변경에 따른 오류 수정.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -70,7 +70,7 @@
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/example/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <!-- ================ -->
